# drivers.gpu.control-library

./: .buildinfo  .gitignore  CMakeLists.txt  LICENSE  License.txt  README.md  api.html  genindex.html  index.html  objects.inv  prog.html  search.html  searchindex.js  versions.html
Samples/: CMakeLists.txt  README.md
Samples/3D_Feature_Samples/: 3D_Feature_Sample_App.cpp  CMakeLists.txt  README.md
Samples/Color_Samples/: CMakeLists.txt  ColorAlgorithms.cpp  ColorAlgorithms.h  ColorAlgorithms_App.cpp  ColorAlgorithms_App.h  Color_Sample_App.cpp  README.md
Samples/CombinedDisplay/: CMakeLists.txt  CombinedDisplay_Sample_App.cpp  Disable.cfg  Enable.cfg  Query.cfg  README.md
Samples/Custom_Mode_Samples/: CMakeLists.txt  CustomMode_Sample_App.cpp  README.md
Samples/DisplayGenlock/: CMakeLists.txt  DisplayGenlock_Sample_App.cpp
Samples/DisplayQuantization_Sample/: CMakeLists.txt  DisplayQuantization_Sample_App.cpp  README.md
Samples/DisplaySettings/: CMakeLists.txt  DisplaySettings_Sample_App.cpp  README.md
Samples/DynamicContrastEnhancement_Sample/: CMakeLists.txt  DynamicContrastEnhancement_Sample_App.cpp
Samples/Edid_Management_Sample/: CMakeLists.txt  Edid_Mgmt_Sample_App.cpp  README.md
Samples/FirmwareApi/: CMakeLists.txt  FirmwareApiApp.cpp  README.md
Samples/Generic_Sample/: CMakeLists.txt  Sample_ControlAPP.cpp
Samples/I2C_AUX_Samples/: CMakeLists.txt  I2C_AUX_Sample_App.cpp  README.md
Samples/Initialization/: CMakeLists.txt  GenericIGCLApp.h  Sample_ControlAPP.cpp
Samples/IntelArcSync/: CMakeLists.txt  IntelArcSync_App.cpp  README.md
Samples/Media_Samples/: CMakeLists.txt  Media_Sample_App.cpp  README.md
Samples/Overclocking_Sample/: CMakeLists.txt  README.md  Sample_OverclockAPP.cpp
Samples/Panel_descriptor_Samples/: CMakeLists.txt  Panel_descriptor_Sample_App.cpp
Samples/Power_Feature_Samples/: CMakeLists.txt  PowerFeature_Sample_App.cpp  README.md
(+34 files in other folders)
