add_subdirectory(3D_Feature_Samples)
add_subdirectory(Color_Samples)
add_subdirectory(CombinedDisplay)
add_subdirectory(Custom_Mode_Samples)
add_subdirectory(DisplayGenlock)
add_subdirectory(DisplaySettings)
add_subdirectory(DynamicContrastEnhancement_Sample)
add_subdirectory(Edid_Management_Sample)
add_subdirectory(FirmwareApi)
add_subdirectory(Generic_Sample)
add_subdirectory(I2C_AUX_Samples)
add_subdirectory(IntelArcSync)
add_subdirectory(Media_Samples)
add_subdirectory(Overclocking_Sample)
add_subdirectory(Panel_descriptor_Samples)
add_subdirectory(Power_Feature_Samples)
add_subdirectory(Scaling_Samples)
add_subdirectory(ScdcRead)
add_subdirectory(Telemetry_Samples)
add_subdirectory(UBRR_Sample)
